--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [{
-        "src": "Dockerfile",
-        "use": "@vercel/docker",
+        "src": "crop_disease/wsgi.py",
+        "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.12" }
     }],
     "routes": [
